--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,16 +8,17 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">LIQ @ ULB</a>
+    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">LIQ @ ULB<img src="{{ site.url }}{{ site.baseurl }}/images/liq-logo.png" style="float:right; margin:0px 0px 0px 10px" height="100%"></a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
-		<li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
+	        <li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Members</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/teaching">Teaching</a></li>
+	        <li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
+		<li><a href="{{ site.url }}{{ site.baseurl }}/teaching">Student Info</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/links">Links</a></li>
+		<!-- <li><a href="{{ site.url }}{{ site.baseurl }}/links">Links</a></li> -->
 		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
 	  </ul>
 	</div>
