--- a/_layouts/homelay.html
+++ b/_layouts/homelay.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
   <div id="homeid" class="col-sm-8">
-        <h2>Laboratoire d'Information Quantique @ ULB</h2>
+        <h1>Laboratoire d'Information Quantique</h1>
 
 	{{ content }}
   </div>
