more misc edits

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -7,14 +7,19 @@
   {{ article.date }} <br />
   {% if article.title %}
   <i>
-  {% if article.url %}
-  <a href="{{ article.url }}">{{ article.title }}</a>
+  {% assign title = article.title %}
   {% else %}
-  {{ article.title }}
+  {% assign title = "TBA" %}
   {% endif %}
+  {% if article.url %}
+  <a href="{{ article.url }}">{{ title }}</a>
+  {% else %}
+  {{ title }}
+  {% endif %}
+  {% if article.title %}
   </i>
-  <br />
   {% endif %}
+  <br />
   {{ article.author }}
 </p>
 {% endfor %}
