--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">LIQ @ ULB<img src="{{ site.url }}{{ site.baseurl }}/images/liq-logo.png" style="float:right; margin:0px 0px 0px 10px" height="100%"></a>
+    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/"><img src="{{ site.url }}{{ site.baseurl }}/images/liq-logo.png" style="margin:0px 0px 0px 10px" height="100%"></a>
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
