add centerd-image class to css

--- a/css/main.scss
+++ b/css/main.scss
@@ -91,3 +91,9 @@ firstp {
     margin-right: 30px;
 }
 
+.centerd-image {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+}
