small modif to calendar.html

--- a/_layouts/calendar.html
+++ b/_layouts/calendar.html
@@ -37,7 +37,7 @@ layout: default
         headerToolbar: {
           left: 'prev,next',
           center: 'title',
-          right: 'dayGridMonth,timeGridWeek,timeGridDay,listMonth'
+          right: 'listMonth,dayGridMonth'
         },
         initialView: 'listMonth',
         navLinks: true, // can click day/week names to navigate views
