--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,19 @@
   <link href="{{ site.url }}{{ site.baseurl }}/assets/academicons/css/academicons.css" rel="stylesheet">
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="shortcut icon" type ="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/images/favicon.ico">
+
+  <!-- favicon -->
+  <!-- old <link rel="shortcut icon" type ="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/images/favicon.ico"> --> 
+
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}{{ site.baseurl }}/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.url }}{{ site.baseurl }}/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.url }}{{ site.baseurl }}/images/favicon-16x16.png">
+  <link rel="manifest" href="{{ site.url }}{{ site.baseurl }}/images/site.webmanifest">
+  <link rel="mask-icon" href="{{ site.url }}{{ site.baseurl }}/images/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="{{ site.url }}{{ site.baseurl }}/images/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="{{ site.url }}{{ site.baseurl }}/images/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 
 
 {% if jekyll.environment == 'production' %}
