--- a/_includes/events.html
+++ b/_includes/events.html
@@ -2,28 +2,11 @@
 <div class="well">
 <h4>Events and seminars</h4>
 
-{% for article in site.data.events limit:9 %}
-<p>
-  {{ article.date }} <br />
-  {% if article.title %}
-  <i>
-  {% assign title = article.title %}
-  {% else %}
-  {% assign title = "TBA" %}
-  {% endif %}
-  {% if article.url %}
-  <a href="{{ article.url }}">{{ title }}</a>
-  {% else %}
-  {{ title }}
-  {% endif %}
-  {% if article.title %}
-  </i>
-  {% endif %}
-  <br />
-  {{ article.author }}
+<p> For local events and seminars on quantum science, check out this <a href="{{ site.url }}{{ site.baseurl }}/allevents.html">calendar</a>
 </p>
-{% endfor %}
 
-<h4><a href="{{ site.url }}{{ site.baseurl }}/allevents.html">... see all events</a></h4>
+<p> For local events and seminars on bio-inspired computing and artifical intelligence, check out this <a href="{{ site.url }}{{ site.baseurl }}/allevents.html">calendar</a>
+</p>
+
 
 </div>
