edit to events.html

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,12 +1,16 @@
 
 <div class="well">
-<h4>Events and seminars</h4>
 
-<p> For local events and seminars on quantum science, check out this <a href="{{ site.url }}{{ site.baseurl }}/allevents.html">calendar</a>
+<p>
+  <span class="glyphicon glyphicon-calendar"></span>
+  Local events and seminars on <a href="{{ site.url }}{{ site.baseurl }}/allevents.html">quantum science</a> 
 </p>
 
-<p> For local events and seminars on bio-inspired computing and artifical intelligence, check out this <a href="{{ site.url }}{{ site.baseurl }}/allevents.html">calendar</a>
+<p>
+  <span class="glyphicon glyphicon-calendar"></span>
+  Local events and seminars on<a href="{{ site.url }}{{ site.baseurl }}/allevents.html">bio-inspired computing and artifical intelligence</a> 
 </p>
 
+<p> For news, follow us on <a href="https://twitter.com/QuantInfoULB?s=20&t=T_I06p5CMyhI5yqchHQhQw">Twitter</a> <i class="fa-brands fa-twitter fa-2x"></i></p>
 
 </div>
