edit to events.html

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -13,4 +13,24 @@
 
 <p> For news, follow us on <a href="https://twitter.com/QuantInfoULB?s=20&t=T_I06p5CMyhI5yqchHQhQw">Twitter</a> <i class="fa-brands fa-twitter fa-2x"></i></p>
 
+<div>
+  Location (theory): <br />
+NO building, 4th floor <br />
+  Plaine Campus <br />
+Boulevard du Triomphe <br />
+1050 Brussels <br />
+Belgium <br />
+  (<a href="https://www.google.be/maps/place/ULB+Plaine+-+Batiment+NO/@50.8196998,4.3969105,18.77z/data=!4m5!3m4!1s0x47c3c4ceab16c2f7:0xdce9335a43c9dfb5!8m2!3d50.8200381!4d4.3978033">Map</a>)
+</div>
+<div>
+Location (experimental): <br />
+Building C, level 3 <br />
+  Solbosch Campus <br />
+Avenue Adolphe Buyl 87 <br />
+1050 Brussels <br />
+Belgium <br />
+  (<a href="https://www.google.com/maps/@50.8144262,4.3819217,16.73z">Map</a>)
+</div>
+
+
 </div>
