--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
 		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li>
 		<!-- <li><a href="{{ site.url }}{{ site.baseurl }}/links">Links</a></li> -->
 		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
-		 <li><a href="https://twitter.com"><i class="fa fa-twitter fa-2x"></i></a></li>
+		 <li><a href="https://twitter.com"><i class="fa-brands fa-twitter fa-2x"></i></a></li>
 	  </ul>
 	</div>
   </div>
