--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,17 +9,19 @@
 	  </button>
 
     <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/"><img src="{{ site.url }}{{ site.baseurl }}/images/liq-logo.png" style="margin: -11px 0px 0px 0px" height="200%"></a>
-	</div>
+</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
-	        <li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>
+	       <!-- <li><a href="{{ site.url }}{{ site.baseurl }}/">Home</a></li>-->
 		<li><a href="{{ site.url }}{{ site.baseurl }}/team">Members</a></li>
 		<li><a href="{{ site.url }}{{ site.baseurl }}/publications">Publications</a></li>
-	        <li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>
+	      <!--  <li><a href="{{ site.url }}{{ site.baseurl }}/research">Research</a></li>-->
 		<li><a href="{{ site.url }}{{ site.baseurl }}/teaching">Student Info</a></li>
-		<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li>
+		<!--<li><a href="{{ site.url }}{{ site.baseurl }}/vacancies">Vacancies</a></li>-->
 		<!-- <li><a href="{{ site.url }}{{ site.baseurl }}/links">Links</a></li> -->
-		<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>
+		<!--<li><a href="{{ site.url }}{{ site.baseurl }}/pictures">(Pics)</a></li>-->
+		<li><a href="{{ site.url }}{{ site.baseurl }}/contacts">Contacts</a></li>
+		<li></li><a href="https://twitter.com/quantinfoulb" style="color:red"><i class="fa-brands fa-twitter fa-xl" style="vertical-align:bottom"></i></a>	</li>
 	  </ul>
 	</div>
   </div>
