--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -1,5 +1,10 @@
-{{ reference  }}
+{{ reference }}
 
 {% if entry.eprint %}
-<p><a href="https://arxiv.org/abs/{{ entry.eprint }}">{{ entry.archive }}:{{ entry.eprint }} [{{ entry.primaryclass }}]</a></p>
+{% if entry.archiveprefix %}
+{% assign archive = entry.archiveprefix %}
+{% else %}
+{% assign archive = "arXiv" %}
+{% endif %}
+<p><a href="https://{{ archive }}.org/abs/{{ entry.eprint }}">{{ archive }}:{{ entry.eprint }}{% if entry.primaryclass %} [{{ entry.primaryclass }}]{% endif %}</a></p>
 {% endif %}
