use doi or url when there is no arxiv link

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -1,5 +1,6 @@
 {{ reference }}
 
+<p>
 {% if entry.eprint %}
 {% if entry.archiveprefix %}
 {% assign archive = entry.archiveprefix %}
@@ -7,5 +8,10 @@
 {% else %}
 {% assign archive = "arXiv" %}
 {% endif %}
-<p><a href="https://{{ archdomain }}.org/abs/{{ entry.eprint }}">{{ archive }}:{{ entry.eprint }}{% if entry.primaryclass %} [{{ entry.primaryclass }}]{% endif %}</a></p>
+<a href="https://{{ archdomain }}.org/abs/{{ entry.eprint }}">{{ archive }}:{{ entry.eprint }}{% if entry.primaryclass %} [{{ entry.primaryclass }}]{% endif %}</a>
+{% elsif entry.doi %}
+<a href="https://doi.org/{{ entry.doi }}">doi:{{ entry.doi }}</a>
+{% elsif entry.url %}
+<a href="{{ entry.url }}">{{ entry.url }}</a>
 {% endif %}
+</p>
