also don\'t show primary class if there isn\'t one

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -8,7 +8,7 @@
 {% else %}
 {% assign archive = "arXiv" %}
 {% endif %}
-<a href="https://{{ archdomain }}.org/abs/{{ entry.eprint }}">{{ archive }}:{{ entry.eprint }}{% unless entry.eprint contains "/" %} [{{ entry.primaryclass }}]{% endunless %}</a>
+<a href="https://{{ archdomain }}.org/abs/{{ entry.eprint }}">{{ archive }}:{{ entry.eprint }}{% unless entry.eprint contains "/" %}{% if entry.primaryclass %} [{{ entry.primaryclass }}]{% endif %}{% endunless %}</a>
 {% elsif entry.doi %}
 <a href="https://doi.org/{{ entry.doi }}">doi:{{ entry.doi }}</a>
 {% elsif entry.url %}
