--- a/css/main.scss
+++ b/css/main.scss
@@ -81,7 +81,7 @@ firstp {
 }
 
 
-/* Carusel */
+/* Carousel */
 
 .carousel {
     border-radius: 3px 3px 3px 3px;
@@ -89,4 +89,5 @@ firstp {
     margin-top: 20px;
     margin-left: 30px;
     margin-right: 30px;
+    width: 75%;
 }
