remove _site/ from repo; add instructions on deployment

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,8 +3,11 @@
   <div class="panel-footer">
     <div class="container-fluid">
       <div class="row">
-          <p>&copy 2022 LIQ @ ULB. Site based on the site of <a href="https://allanlab.org">Allan Lab</a> made with <a href="https://jekyllrb.com">Jekyll</a>.</p>
-	    </div>
+        <p>&copy 2022 LIQ @ ULB. Site based on the site of
+          <a href="https://allanlab.org">Allan Lab</a>, built with
+          <a href="https://jekyllrb.com">Jekyll</a>. Source available on
+          <a href="https://github.com/liq-ulb/liq-ulb.github.io">Github</a>.</p>
+      </div>
     </div>
   </div>
 </div>
